--- a/frontend/src/app/question/question.component.html
+++ b/frontend/src/app/question/question.component.html
@@ -1,3 +1,7 @@
-<p>
-  question works!
-</p>
+
+  <form class="example-form">
+    <mat-form-field>
+      <input matInput placeholder="question">
+    </mat-form-field>
+  </form>
+
